# Monopoly

./: CMakeLists.txt  idee.txt  readme.txt
Logs/: ComputerLog.txt  HumanLog.txt  Log.txt
include/: Board.h  Cell.h  ComputerPlayer.h  Game.h  HumanPlayer.h  Player.h
src/: Board.cpp  Cell.cpp  ComputerPlayer.cpp  Game.cpp  HumanPlayer.cpp  Player.cpp  main.cpp
